product category imgaes changed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       Cosmetics White Label Manufacturer
                     </option>
                     <option value="Travel Packs OEM" class="text-[#96A0A9]">
-                      Travel Packs OEM
+                      Skin Care OEM
                     </option>
                     <option
                       value="Research & Development for new concepts"
@@ -217,21 +217,21 @@
           <div class="pruductItems mt-10">
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstickTwo.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">Lipstick all range</p>
                 <p class="mt-1">Normal Lipstick</p>
                 <p class="mt-1">Long Lasting lipstick</p>
                 <p class="mt-1">Pearl with matte lipstick</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstick.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Liquid Lipstick</p>
                 <p class="mt-1">Normal Liquid Lipstick</p>
                 <p class="mt-1">Long Lasting Liquid lipstick</p>
                 <p class="mt-1">Pearl Liquid lipstick</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/eyeliner-pencils.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">Eyeliner / Mascara / Kajal</p>
                 <p class="mt-1">Sketch eyeliner</p>
@@ -241,18 +241,18 @@
             </div>
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/foundation.png" alt="ProductIcon" class="h-[100px]">
                 <p class="text-2xl uppercase">Foundation/ Concealer/ Blusher</p>
 
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/perfume.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Perfume</p> 
                 <p class="mt-1">Long Lasting Premium Perfume</p>
                 <p class="mt-1">Room Freshner</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/serum.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Face Serum</p>
                 <p class="mt-1">Vitamin C Face Serum</p>
@@ -262,7 +262,7 @@
             </div>
 
             <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/nail-polish.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Nail polish
                 </p>
@@ -270,14 +270,14 @@
                 <p class="mt-1">Matte Nail Polish </p>
                 <p class="mt-1">Mettalic Nail Polish</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/balm.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Lip balm</p>
                 <p class="mt-1">Herbal Lip Balm </p>
                 <p class="mt-1">Lip Balm With Spf</p>
                 <p class="mt-1">Long Lasting Lipgloss</p>
               </div>
-              <div class="bg-[#6C3A5C] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
+              <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/cream.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Skin Care</p>
                 <p class="mt-1">Shampoo</p>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="flex justify-between flex-col md:flex-row mt-5">
-              <div class="bg-[#ffff] hover:-translate-x-2.5 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#ffff] shadow-xl hover:-translate-x-2.5 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
                 <p class="text-2xl text-[#6C3A5C] my-5">Bespoke Formulations</p>
                 <p class="mt-1">Our tema of experience chemists and product developer work closely with you to create custom, Innovative, and high-performance cosmetics tailored to your brand's unique vision </p>
               </div>
@@ -312,7 +312,7 @@
                 <p class="mt-1">We simplify the private label process with our comprehensive suite of services, including research and development, formulaion, packagin desing, producion, and branding - all under one roof.</p>
 
               </div>
-              <div class="bg-[#fff] hover:-translate-x-[-10px] transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
+              <div class="bg-[#fff] shadow-xl hover:-translate-x-[-10px] transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
                 <p class="text-2xl text-[#6C3A5C] my-5">Quality Assurance</p>
                 <p class="mt-1">We adhere to the highest industy standards and regulations, ensuing that your products are consistently safe, effective, and of the highest quality.</p>
 
@@ -423,25 +423,25 @@
 
           <div class="flex flex-col gap-8 md:flex-row justify-center mt-14">
             <div class="text-center md:w-[30%] p-[1rem]">
-              <img src="./assest/factoryImages/world-f.jpg" alt="factory" class="block m-auto" width="100%">
+              <img src="./assest/factoryImages/1.png" alt="factory" class="block m-auto" width="100%">
               <h2 class="text-3xl my-3">World-Class Factory</h2>
               <p>We take pride in our State of the art facility. Our machinery is top-notch and can produce large batches of products without compromising in quality</p>
             </div>
 
             <div class="text-center md:w-[30%] p-[1rem]">
-              <img src="./assest/factoryImages/safe.jpg" alt="factory" class="block m-auto" width="100%">
+              <img src="./assest/factoryImages/2.png" alt="factory" class="block m-auto" width="100%">
               <h2 class="text-3xl my-3">Safe And Hygienic</h2>
               <p>We produce products that are safe and hygienic. They are untouched by human hands and follow through with several quality checks at various stages</p>
             </div>
 
             <div class="text-center md:w-[30%] p-[1rem]">
-              <img src="./assest/factoryImages/scientist-med-suit-working-with-machine.jpg" alt="factory" class="block m-auto" width="100%">
+              <img src="./assest/factoryImages/3.png" alt="factory" class="block m-auto" width="100%">
               <h2 class="text-3xl my-3">Product Development</h2>
               <p>We take precise measurements and make the perfect product by keeping in check with the quality standards.</p>
             </div>
 
             <div class="text-center md:w-[30%] p-[1rem] ">
-              <img src="./assest/factoryImages/manu.jpg" alt="factory" class="block m-auto" width="100%">
+              <img src="./assest/factoryImages/4.png" alt="factory" class="block m-auto" width="100%">
               <h2 class="text-3xl my-3">Leading Manufacturer</h2>
               <p>One of the leading manufacturers of cosmetics and products that are used by customers all over the world.</p>
             </div>
@@ -575,7 +575,7 @@
                       Cosmetics White Label Manufacturer
                     </option>
                     <option value="Travel Packs OEM" class="text-[#96A0A9]">
-                      Travel Packs OEM
+                      Skin Care OEM
                     </option>
                     <option
                       value="Research & Development for new concepts"
