final all section ready

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
           <div class="pruductItems mt-10">
 
-            <div class="flex text-white gap-6 justify-between flex-col md:flex-row">
+            <div class="flex gap-6 justify-between flex-col md:flex-row">
               <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/lipstickTwo.png" alt="ProductIcon" class="h-[100px] mb-8" >
                 <p class="text-2xl uppercase">Lipstick all range</p>
@@ -240,7 +240,7 @@
               </div>
             </div>
 
-            <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
+            <div class="flex gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/foundation.png" alt="ProductIcon" class="h-[100px]">
                 <p class="text-2xl uppercase">Foundation/ Concealer/ Blusher</p>
@@ -261,7 +261,7 @@
               </div>
             </div>
 
-            <div class="flex text-white gap-6 justify-between flex-col md:flex-row mt-5">
+            <div class="flex gap-6 justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#FFDADA] text-center md:w-[40%] flex flex-col items-center p-[2rem]">
                 <img src="./assest/nail-polish.png" alt="ProductIcon" class="h-[100px] mb-8">
                 <p class="text-2xl uppercase">Nail polish
@@ -372,16 +372,16 @@
               </div>
 
               <div class="z-10 flex justify-center">
-                <img src="./assest/productUsImages/Untitled-3_01-1-150x150.png" alt="productIcons" class="z-10">
+                <img src="./assest/productUsImages/1.png" alt="productIcons" class="z-10">
               </div>
               <div class="z-10 flex justify-center">
-                <img src="./assest/productUsImages/Untitled-3_02-1-150x150.png" alt="productIcons" class="z-10">
+                <img src="./assest/productUsImages/2.png" alt="productIcons" class="z-10">
               </div>
               <div class="z-10 flex justify-center">
-                <img src="./assest/productUsImages/Untitled-3_03-1-150x150.png" alt="productIcons" class="z-10">
+                <img src="./assest/productUsImages/3.png" alt="productIcons" class="z-10">
               </div>
               <div class="z-10 flex justify-center">
-                <img src="./assest/productUsImages/Untitled-3_04-1-150x150.png" alt="productIcons" class="z-10">
+                <img src="./assest/productUsImages/4.png" alt="productIcons" class="z-10">
               </div>
             </div>
 
@@ -467,14 +467,6 @@
 
             <div class="text-center md:w-[30%] p-[1rem]">
               <img src="./assest/certificates/Food_and_Drug_Administration_logo.svg-200x83.png" alt="factory" class="block m-auto" width="100%">
-            </div>
-
-            <div class="text-center md:w-[30%] p-[1rem]">
-              <img src="./assest/certificates/cosmos_ecocert.png" alt="factory" class="block m-auto" width="100%">
-            </div>
-
-            <div class="text-center md:w-[30%] p-[1rem] ">
-              <img src="./assest/certificates/2560px-Conformite_Europeenne_logo.svg-200x143.png" alt="factory" class="block m-auto" width="100%">
             </div>
 
             <div class="text-center md:w-[30%] p-[1rem] ">
