final changes done

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
 
             <div class="advantageVideo w-full md:w-[50%] flex items-center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/b0z10P4qRyY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/60AiN1Vc9EY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -299,13 +299,13 @@
               <p class="text-red-500 space-x-5">UNRIVALED EXPERTISE AND COMMITMENT TO YOUR BRAND’S SUCCESS</p>
               <div class="border border-t-slate-300 w-[25%] mt-1 mb-3"></div>
               <h2 class="my-3 text-5xl">Why Choose Us?</h2>
-              <p>At Gorgeous Cosmos Healthcare, we understand the importance of creating a beauty brand that captivates your target audience and stands out in the competitive cosmetics market. Here’s why partnering with us will give your brand the competitive edge it deserves:</p>
+              <p>At Gorgeous Cosmos, we understand the importance of creating a beauty brand that captivates your target audience and stands out in the competitive cosmetics market. Here’s why partnering with us will give your brand the competitive edge it deserves:</p>
             </div>
 
             <div class="flex justify-between flex-col md:flex-row mt-5">
               <div class="bg-[#ffff] shadow-xl hover:-translate-x-2.5 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
                 <p class="text-2xl text-[#6C3A5C] my-5">Bespoke Formulations</p>
-                <p class="mt-1">Our tema of experience chemists and product developer work closely with you to create custom, Innovative, and high-performance cosmetics tailored to your brand's unique vision </p>
+                <p class="mt-1">Our team of experience chemists and product developer work closely with you to create custom, Innovative, and high-performance cosmetics tailored to your brand's unique vision </p>
               </div>
               <div class="bg-[#fff] scale-105 z-10 shadow-2xl hover:scale-110 transition-all duration-500 text-center md:w-[45%] flex flex-col items-center p-[4rem]">
                 <p class="text-2xl text-[#6C3A5C] my-5">End-to-End Services</p>
@@ -333,7 +333,7 @@
           </div>
           <div class="text-center counter flex justify-between flex-col md:flex-row mt-5">
             <div class="my-5">
-              <h2 class="text-4xl"> 60+ </h2>
+              <h2 class="text-4xl"> 12+ </h2>
               <p class="text-slate-500">Countreis Served</p>
             </div>
             <div class="my-5">
@@ -341,7 +341,7 @@
               <p class="text-slate-500">Production Capacity</p>
             </div>
             <div class="my-5">
-              <h2 class="text-4xl"> 60 Sq ft </h2>
+              <h2 class="text-4xl"> 2000 Sq ft </h2>
               <p class="text-slate-500">Manufacturing Area</p>
             </div>
           </div>
@@ -621,7 +621,7 @@
       <!-- ==================================footer===================================== -->
 
       <footer class="py-5" style="border-top: 1px solid black;">
-        <p class="text-center">&copy; <span class="date">date</span> Gorgeous Cosmos Healthcare Pvt Ltd. All Rights Reserved</p>
+        <p class="text-center">&copy; <span class="date">date</span> Gorgeous Cosmos Pvt Ltd. All Rights Reserved</p>
       </footer>
 
     </div>
